<resources>
    <string name="app_name">Card Creater</string>
    <string name="greetings">Greetings!</string>
    <string name="from">FROM</string>
    <string name="to">TO</string>
    <string name="heading">HEADING</string>
    <string name="message">MESSAGE</string>
    <string name="click">CLICK</string>
    <string name="t1">t1</string>
    <string name="textview">TextView</string>
    <string name="text3">Text3</string>
    <string name="t4">t4</string>
    <string name="weekend">Weekend!</string>
    <string name="create_card">CREATE CARD</string>
</resources>
